<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameSelectionActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/headerTextStyle"
        android:text="@string/header_game_selection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_button" />

    <TextView
        android:id="@+id/selectedGame"
        android:text="@string/default_selected_text"
        style="@style/largeTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ListView
        android:id="@+id/game_list"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/selectedGame"
        tools:layout_editor_absoluteX="50dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="36dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/back_btn"
            style="@style/btnLayout"
            android:layout_marginEnd="40dp"
            android:text="@string/btn_text_back" />

        <Button
            android:id="@+id/ok_btn"
            style="@style/btnLayout"
            android:text="@string/btn_text_ok" />
    </LinearLayout>

    <Button
        android:id="@+id/help_button"
        style="@style/helpBtnLayout"
        android:layout_alignParentEnd="true"
        android:text="@string/btn_text_question_mark"
        android:contentDescription="@string/btn_desc_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>