<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameStatsActivity">

    <TextView
        android:id="@+id/top_title"
        style="@style/headerTextStyle"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_button" />

    <LinearLayout
        android:id="@+id/game_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/top_title">

        <TextView
            android:paddingBottom="20dp"
            android:id="@+id/elapsed_time_text"
            style="@style/largeTextStyle"
            android:text="Time played: 00:00:00"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="32dp">

        <Button
            android:id="@+id/stop_btn"
            style="@style/btnLayout"
            android:layout_marginEnd="40dp"
            android:text="@string/btn_text_stop" />

        <Button
            android:id="@+id/pause_btn"
            style="@style/btnLayout"
            android:text="@string/btn_text_pause" />

    </LinearLayout>

    <Button
        android:id="@+id/help_button"
        style="@style/helpBtnLayout"
        android:layout_alignParentEnd="true"
        android:text="@string/btn_text_question_mark"
        android:contentDescription="@string/btn_desc_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>